clang/test/BSC/Negative/Generic/InvalidTemplateParameters/do_not_crash1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

a<b,>();c
// expected-error@-1 {{expected template parameter}}
// expected-error@-2 {{unknown type name 'a'}}
// expected-error@-3 {{expected identifier or '('}}
// expected-error@-4 {{unknown type name 'c'}}

// expected-error {{expected identifier or '('}}
